Bug 1372371.  Fix enumerability handling in the window resolve hook.  r=qdot